# blazepilot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.es.md  README.md  cliff.toml  setup-hooks.sh
.cargo/: audit.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  security.yml
blaze-app/src/: app.rs  main.rs
blaze-app/src/core/: blaze_state.rs  mod.rs
blaze-app/src/core/bootstrap/: config_state.rs  mod.rs
blaze-app/src/core/bootstrap/configs/: config_manager.rs  error.rs  mod.rs
blaze-app/src/core/bootstrap/configs/platform/: config_trait.rs  mod.rs
blaze-app/src/core/bootstrap/configs/platform/linux/: backend.rs  conf_structs.rs  linux.rs  mod.rs
blaze-app/src/core/bootstrap/i18n/: mod.rs
blaze-app/src/core/bootstrap/install_manager/: installation_manager.rs  mod.rs
blaze-app/src/core/bootstrap/install_manager/platform/: installation_trait.rs  mod.rs
blaze-app/src/core/bootstrap/install_manager/platform/linux/: backend.rs  linux.rs
blaze-app/src/core/bootstrap/quick_access_manager/: error.rs  manager.rs  mod.rs
blaze-app/src/core/bootstrap/quick_access_manager/platform/: mod.rs  quick_acc_trait.rs  structs.rs
blaze-app/src/core/bootstrap/quick_access_manager/platform/linux/: backend.rs  linux.rs
blaze-app/src/core/configs/: config_state.rs  mod.rs
blaze-app/src/core/files/: file_extension.rs  mod.rs  motor.rs  recursive_search.rs
blaze-app/src/core/files/blaze_motor/: blaze_loader.rs  error.rs  mod.rs  motor.rs  motor_structs.rs  tab_state.rs  utilities.rs  watcher.rs
blaze-app/src/core/runtime/: bus_macros.rs  bus_structs.rs  event_bus.rs  mod.rs
blaze-app/src/core/system/: clipboard.rs  mod.rs  taskmanager.rs
blaze-app/src/core/system/cache/: cache_manager.rs  mod.rs
blaze-app/src/core/system/cache/color_cache/: color_cache.rs  color_cache_logic.rs  mod.rs
blaze-app/src/core/system/clipboard/: clipboard.rs  error.rs  global_clipboard.rs  mod.rs
blaze-app/src/core/system/disk_reader/: disk.rs  disk_manager.rs  mod.rs
blaze-app/src/core/system/disk_reader/platform/: linux.rs
blaze-app/src/core/system/extended_info/: error.rs  extended_info_manager.rs  mod.rs
blaze-app/src/core/system/fileopener_module/: error.rs  fileopener_manager.rs  mod.rs
blaze-app/src/core/system/fileopener_module/platform/: macos.rs  mod.rs  opener_trait.rs  windows.rs
blaze-app/src/core/system/fileopener_module/platform/linux/: appassociation.rs  backend.rs  linux.rs  mimeapps.rs  mimeappsfile.rs  mod.rs  structs.rs
blaze-app/src/core/system/knowndirs/: knowndirs_manager.rs  mod.rs
blaze-app/src/core/system/operationstate/: mod.rs  operation_manager.rs  undo_record.rs
blaze-app/src/core/system/sizer_manager/: manager.rs  mod.rs  sizer_manager.rs
blaze-app/src/core/system/terminal_opener/: mod.rs  terminal_manager.rs
blaze-app/src/core/system/terminal_opener/platform/linux/: backend.rs  linux.rs
blaze-app/src/core/system/trash_manager/: error.rs  manager.rs  mod.rs  trash_manager.rs
blaze-app/src/core/system/trash_manager/platform/: linux.rs  mod.rs
blaze-app/src/core/system/updater/: mod.rs  updater.rs  updater_manager.rs
blaze-app/src/core/system/zip_manager/: mod.rs  zip_manager.rs
blaze-app/src/ui/: blaze_ui_state.rs  mod.rs
blaze-app/src/ui/assets/i18n/: de.toml  en.toml  es.toml  fr.toml  it.toml  ru.toml
blaze-app/src/ui/dialog_manager/: dialog_manager.rs  manager.rs  mod.rs
blaze-app/src/ui/dialog_manager/dialogs/: configs_dialog.rs  error_dialog.rs  folder_color_selector_dialog.rs  image_preview_dialog.rs  mod.rs  quick_dialogs.rs  selector_dialog.rs  show_generic_message.rs  sure_to_delete.rs  sure_to_move_to.rs  update_dialog.rs  want_to_install.rs
blaze-app/src/ui/dialogs/: configs_dialog.rs  error_dialog.rs  folder_color_selector_dialog.rs  image_preview_dialog.rs  mod.rs  selector_dialog.rs  sure_to_delete.rs  sure_to_move_to.rs  update_dialog.rs
blaze-app/src/ui/icons_cache/: icon_cache.rs  icons.rs  mod.rs
blaze-app/src/ui/icons_cache/thumbnails/: mod.rs  thumbnails_manager.rs  utils.rs
blaze-app/src/ui/image_preview/: error.rs  image_preview.rs  image_preview_handler.rs  mod.rs
blaze-app/src/ui/modules/: drag_drop_logic.rs  file_view.rs  file_view_callback.rs  hot_keys.rs  island_n_bubble.rs  mod.rs  render_tags_view.rs  sidebar_left.rs  sidebar_right.rs  toolbar.rs  tools_view.rs  ui_callback.rs  utilities.rs
blaze-app/src/ui/modules/custom_context_menu/: context_state.rs  mod.rs
blaze-app/src/ui/modules/grid_view/: grid_scroll_view.rs  mod.rs  render_grid_panel_view.rs  rubber_band_logic.rs
blaze-app/src/ui/modules/row_view/: drag_drop_logic.rs  hot_keys.rs  island_n_bubble.rs  mod.rs  new_scroll_view.rs  render_drag.rs  render_row_panel_view.rs  render_tags_view.rs  row_view_callback.rs  rubber_band_logic.rs  srcoll_view.rs  tools_view.rs  utilities.rs
blaze-app/src/ui/modules/sidebar_left_component/: mod.rs  sidebar_callback.rs  sidebar_components.rs
blaze-app/src/ui/task_manager/: task_manager.rs  tasks.rs
blaze-app/src/ui/themes/: colors.rs  mod.rs  theme_manager.rs
blaze-app/src/ui/themes/platform/: colors_trait.rs  mod.rs  structs.rs
blaze-app/src/ui/themes/platform/linux/: backend.rs
blaze-app/src/utils/: channel_pool.rs  formating.rs  initial_path_handler.rs  mod.rs  sysinfo.rs
