[package]
name = "blazepilot"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "blazepilot"
path = "blaze-app/src/main.rs"

[dependencies]
egui = { version = "0.34.1", features = ["serde"] }
egui_extras = "0.34.1"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "6.0.0"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
lru = "0.16.3"
uuid = { version = "1.7", features = ["v4"] }
notify = "8.2.0"
directories = "6.0.0"
serde_json = "1.0.149"
serde = "1.0.228"
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
trash = "5.2.5"
cfg-if = "1.0.4"
shell-words = "1.1.1"
freedesktop-icons = "0.4.0"
resvg = "0.47.0"
image = "0.25.10"
mime_guess = "2.0.5"
fuzzy-matcher = "0.3.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
mimalloc = "0.1.48"
anyhow = "1.0.102"
zbus = "5.14.0"
udisks2 = "0.3.1"
libc = "0.2.183"
users = "0.11.0"
which = "8.0.2"
self_update = "0.44.0"
jwalk = "0.8.1"
sysinfo = "0.38.4"
postcard = { version = "1.1.3", features = ["use-std"] }
bitvec = "1.0.1"
file-id = { version = "0.2.3", features = ["serde"] }
git2 = "0.20.4"
zip = "8.5.1"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.6.1"
thiserror = "2.0.18"
sha2 = "0.11.0"
ffmpeg-sidecar = "2.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["wgpu", "x11", "wayland", "wgpu_no_default_features"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland",] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.34.1", features = ["wgpu"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
