[package]
name = "blazepilot"
version = "0.13.0"
edition = "2021"

[[bin]]
name = "blazepilot"
path = "blaze-app/src/main.rs"

[dependencies]
egui = { version = "0.34.3", features = ["serde"] }
egui_extras = "0.34.3"
openssl = { version = "0.10.79", features = ["vendored"] }
once_cell = "1.19"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
lru = "0.18.0"
uuid = { version = "1.23.1", features = ["v4"] }
notify = "8.2.0"
directories = "6.0.0"
serde_json = "1.0.149"
serde = "1.0.228"
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
cfg-if = "1.0.4"
shell-words = "1.1.1"
mime_guess = "2.0.5"
fuzzy-matcher = "0.3.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
mimalloc = "0.1.50"
anyhow = "1.0.102"
zbus = "5.15.0"
udisks2 = "0.3.1"
libc = "0.2.186"
uzers = "0.12.2"
which = "8.0.2"
self_update = "0.44.0"
jwalk = "0.8.1"
sysinfo = "0.39.1"
postcard = { version = "1.1.3", features = ["use-std"] }
bitvec = "1.0.1"
file-id = { version = "0.2.3", features = ["serde"] }
git2 = "0.21.0"
zip = "8.6.0"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.6.1"
thiserror = "2.0.18"
sha2 = "0.11.0"
ffmpeg-sidecar = "2.5.1"
dashmap = "6.1.0"
urlencoding = "2.1.3"
parking_lot = "0.12.5"
toml = "1.1.2"
resvg = "0.47.0"
imagesize = "0.14.0"
stb_image = "0.3"
image-webp = "0.2"
libavif-image = "0.14.0"
fast_image_resize = "6.0.0"
tiff = { version = "0.11.3", default-features = false, features = ["deflate", "fax", "lzw"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["wgpu", "x11", "wayland", "wgpu_no_default_features"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland",] }
linicon = "2.3.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.34.3", features = ["wgpu"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.34.3", features = ["wgpu"] }



[profile.dev]
debug = "line-tables-only"
opt-level = 1
split-debuginfo = "unpacked"
panic = "unwind"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
